pkgs/unnu_dxl/lib/src/bindings.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names
// ignore_for_file: unused_import

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
@ffi.DefaultAsset('package:unnu_dxl/src/bindings.dart')
library;

import 'dart:ffi' as ffi;

@ffi.Native<ffi.Void Function(ffi.Pointer<va_list>)>()
external void __va_start(
  ffi.Pointer<va_list> arg0,
);

@ffi.Native<ffi.Void Function()>()
external void __security_init_cookie();

@ffi.Native<ffi.Void Function(ffi.UintPtr)>()
external void __security_check_cookie(
  int _StackCookie,
);

@ffi.Native<ffi.Void Function(ffi.UintPtr)>()
external void __report_gsfailure(
  int _StackCookie,
);

@ffi.Native<ffi.UintPtr>()
external int __security_cookie;

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>()
external void unnu_dxl_parse(
  ffi.Pointer<ffi.Char> filepath,
);

@ffi.Native<ffi.Void Function(UnnuDxlResultCallback)>()
external void unnu_dxl_set_parse_callback(
  UnnuDxlResultCallback parse_callback,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<UnnuDxlParseResult_t>)>()
external void unnu_dxl_free_result(
  ffi.Pointer<UnnuDxlParseResult_t> result,
);

@ffi.Native<ffi.Void Function()>()
external void unnu_dxl_unset_parse_callback();

typedef va_list = ffi.Pointer<ffi.Char>;
typedef ptrdiff_t = ffi.LongLong;
typedef Dartptrdiff_t = int;
typedef int_least8_t = ffi.SignedChar;
typedef Dartint_least8_t = int;
typedef int_least16_t = ffi.Short;
typedef Dartint_least16_t = int;
typedef int_least32_t = ffi.Int;
typedef Dartint_least32_t = int;
typedef int_least64_t = ffi.LongLong;
typedef Dartint_least64_t = int;
typedef uint_least8_t = ffi.UnsignedChar;
typedef Dartuint_least8_t = int;
typedef uint_least16_t = ffi.UnsignedShort;
typedef Dartuint_least16_t = int;
typedef uint_least32_t = ffi.UnsignedInt;
typedef Dartuint_least32_t = int;
typedef uint_least64_t = ffi.UnsignedLongLong;
typedef Dartuint_least64_t = int;
typedef int_fast8_t = ffi.SignedChar;
typedef Dartint_fast8_t = int;
typedef int_fast16_t = ffi.Int;
typedef Dartint_fast16_t = int;
typedef int_fast32_t = ffi.Int;
typedef Dartint_fast32_t = int;
typedef int_fast64_t = ffi.LongLong;
typedef Dartint_fast64_t = int;
typedef uint_fast8_t = ffi.UnsignedChar;
typedef Dartuint_fast8_t = int;
typedef uint_fast16_t = ffi.UnsignedInt;
typedef Dartuint_fast16_t = int;
typedef uint_fast32_t = ffi.UnsignedInt;
typedef Dartuint_fast32_t = int;
typedef uint_fast64_t = ffi.UnsignedLongLong;
typedef Dartuint_fast64_t = int;
typedef intmax_t = ffi.LongLong;
typedef Dartintmax_t = int;
typedef uintmax_t = ffi.UnsignedLongLong;
typedef Dartuintmax_t = int;

enum UnnuDxlDataType {
  UNNU_DXL_BOOL(0),
  UNNU_DXL_INT(1),
  UNNU_DXL_FLOAT(2),
  UNNU_DXL_STRING(3),
  UNNU_DXL_XML(4),
  UNNU_DXL_JSON(5),
  UNNU_DXL_BINARY(6),
  UNNU_DXL_ERROR(7);

  final int value;
  const UnnuDxlDataType(this.value);

  static UnnuDxlDataType fromValue(int value) => switch (value) {
    0 => UNNU_DXL_BOOL,
    1 => UNNU_DXL_INT,
    2 => UNNU_DXL_FLOAT,
    3 => UNNU_DXL_STRING,
    4 => UNNU_DXL_XML,
    5 => UNNU_DXL_JSON,
    6 => UNNU_DXL_BINARY,
    7 => UNNU_DXL_ERROR,
    _ => throw ArgumentError('Unknown value for UnnuDxlDataType: $value'),
  };
}

final class UnnuDxlValue extends ffi.Union {
  @ffi.Bool()
  external bool boolvalue;

  @ffi.Int()
  external int intvalue;

  @ffi.Float()
  external double floatvalue;

  @ffi.Int()
  external int error;

  external ffi.Pointer<ffi.Char> value;
}

typedef UnnuDxlValue_t = UnnuDxlValue;

final class UnnuDxlDataValue extends ffi.Struct {
  @ffi.Uint8()
  external int typeAsInt;

  UnnuDxlDataType get type => UnnuDxlDataType.fromValue(typeAsInt);

  external UnnuDxlValue_t data;

  @ffi.Int()
  external int length;
}

typedef UnnuDxlDataValue_t = UnnuDxlDataValue;

final class UnnuDxlMetaDataEntry extends ffi.Struct {
  external ffi.Pointer<ffi.Char> key;

  @ffi.Int()
  external int length;

  external UnnuDxlDataValue_t value;
}

typedef UnnuDxlMetaDataEntry_t = UnnuDxlMetaDataEntry;

final class UnnuDxlParseResult extends ffi.Struct {
  @ffi.Uint8()
  external int typeAsInt;

  UnnuDxlDataType get type => UnnuDxlDataType.fromValue(typeAsInt);

  external ffi.Pointer<ffi.Char> buffer;

  @ffi.Int()
  external int length;

  external ffi.Pointer<UnnuDxlMetaDataEntry_t> metadata;

  @ffi.Int()
  external int num_metadata_entries;
}

typedef UnnuDxlParseResult_t = UnnuDxlParseResult;
typedef UnnuDxlResultCallbackFunction =
    ffi.Void Function(ffi.Pointer<UnnuDxlParseResult_t> result);
typedef DartUnnuDxlResultCallbackFunction =
    void Function(ffi.Pointer<UnnuDxlParseResult_t> result);
typedef UnnuDxlResultCallback =
    ffi.Pointer<ffi.NativeFunction<UnnuDxlResultCallbackFunction>>;

const int _VCRT_COMPILER_PREPROCESSOR = 1;

const int _SAL_VERSION = 20;

const int __SAL_H_VERSION = 180000000;

const int _USE_DECLSPECS_FOR_SAL = 0;

const int _USE_ATTRIBUTES_FOR_SAL = 0;

const int _CRT_PACKING = 8;

const int _VCRUNTIME_DISABLED_WARNINGS = 4514;

const int _HAS_EXCEPTIONS = 1;

const int _WCHAR_T_DEFINED = 1;

const int NULL = 0;

const int _HAS_CXX17 = 0;

const int _HAS_CXX20 = 0;

const int _HAS_CXX23 = 0;

const int _HAS_CXX26 = 0;

const int _HAS_NODISCARD = 1;

const int INT8_MIN = -128;

const int INT16_MIN = -32768;

const int INT32_MIN = -2147483648;

const int INT64_MIN = -9223372036854775808;

const int INT8_MAX = 127;

const int INT16_MAX = 32767;

const int INT32_MAX = 2147483647;

const int INT64_MAX = 9223372036854775807;

const int UINT8_MAX = 255;

const int UINT16_MAX = 65535;

const int UINT32_MAX = 4294967295;

const int UINT64_MAX = -1;

const int INT_LEAST8_MIN = -128;

const int INT_LEAST16_MIN = -32768;

const int INT_LEAST32_MIN = -2147483648;

const int INT_LEAST64_MIN = -9223372036854775808;

const int INT_LEAST8_MAX = 127;

const int INT_LEAST16_MAX = 32767;

const int INT_LEAST32_MAX = 2147483647;

const int INT_LEAST64_MAX = 9223372036854775807;

const int UINT_LEAST8_MAX = 255;

const int UINT_LEAST16_MAX = 65535;

const int UINT_LEAST32_MAX = 4294967295;

const int UINT_LEAST64_MAX = -1;

const int INT_FAST8_MIN = -128;

const int INT_FAST16_MIN = -2147483648;

const int INT_FAST32_MIN = -2147483648;

const int INT_FAST64_MIN = -9223372036854775808;

const int INT_FAST8_MAX = 127;

const int INT_FAST16_MAX = 2147483647;

const int INT_FAST32_MAX = 2147483647;

const int INT_FAST64_MAX = 9223372036854775807;

const int UINT_FAST8_MAX = 255;

const int UINT_FAST16_MAX = 4294967295;

const int UINT_FAST32_MAX = 4294967295;

const int UINT_FAST64_MAX = -1;

const int INTPTR_MIN = -9223372036854775808;

const int INTPTR_MAX = 9223372036854775807;

const int UINTPTR_MAX = -1;

const int INTMAX_MIN = -9223372036854775808;

const int INTMAX_MAX = 9223372036854775807;

const int UINTMAX_MAX = -1;

const int PTRDIFF_MIN = -9223372036854775808;

const int PTRDIFF_MAX = 9223372036854775807;

const int SIZE_MAX = -1;

const int SIG_ATOMIC_MIN = -2147483648;

const int SIG_ATOMIC_MAX = 2147483647;

const int WCHAR_MIN = 0;

const int WCHAR_MAX = 65535;

const int WINT_MIN = 0;

const int WINT_MAX = 65535;

const int __bool_true_false_are_defined = 1;

const int false$ = 0;

const int true$ = 1;
